# hermit-shell

./: .gitignore  .hermit  .travis.yml  FAILURES.md  Foo.hs  LICENSE  Makefile  README.md  hermit-ghci.cabal  hermit-shell.cabal
driver/: Main.hs
examples/: notes.txt
examples/casereduce/: CaseReduceScript.hs
examples/concatVanishes/: .gitignore  ConcatVanishesScript.hs  FlattenScript.hs  HList.hs  QSort.hs  QSortScript.hs  Rev.hs  RevScript.hs  WWAssAScript.hs
examples/evaluation/: Eval  EvalScript.hs  WWAssA.hs  WWAssAScript.hs
examples/factorial/: FacScript.hs  WWAssAScript.hs
examples/fib/: Fib.hs  Fib.hss  FibScript.hs
examples/fib-stream/: Fib.hs  FibScript.hs  Nat.hs  Stream.hs
examples/fib-tuple/: 1804289383846930886.ghci-hermit  Fib  FibScript.hs  WW-Ass-A.hss  WWAssAScript.hs
examples/fix-fusion/: FStrictScript.hs  Fusion  FusionScript.hs  PreconditionLScript.hs  PreconditionRScript.hs
examples/flatten/: Flatten.hs  FlattenScript.hs  StrictRepHScript.hs  WWAssAScript.hs
examples/hanoi/: 1804289383846930886.ghci-hermit  Hanoi.hss  HanoiScript.hs
examples/induction/: BaseCaseScript.hs  InductiveStepScript.hs  VerifyScript.hs
examples/last/: LastScript.hs  NewLastScript.hs  WWAssBScript.hs
examples/laws/: IVerifyMapAppendScript.hs  VerifyAppendAssocScript.hs  VerifyAppendNil.hs  VerifyAppendNilScript.hs  VerifyAppendNonemptyScript.hs  VerifyConcatAppendScript.hs  VerifyConcatConcatScript.hs  VerifyConcatNonemptyScript.hs  VerifyConcatOfToListScript.hs  VerifyConcatUnitScript.hs  VerifyListLeftUnitScript.hs  VerifyListMonadAssoc.hs  VerifyListMonadAssocScript.hs  VerifyListMonoidAssocScript.hs  VerifyMapAppendScript.hs  VerifyMapComposeScript.hs  VerifyMapConcatScript.hs  VerifyMapNonemptyScript.hs  VerifyNilAppendScript.hs
examples/life/: README.md
examples/map-fusion/: MapFusionScript.hs
examples/mean/: .gitignore  Mean  MeanScript.hs
examples/minfree/: Minfree  Minfree.hs  MinfreeScript.hs
examples/new_reverse/: HList.hs  Reverse  Reverse.hs  ReverseScript.hs
examples/nub/: .gitignore  NubScript.hs
examples/qsort/: .gitignore  HList.hs  QSort  QSort.hs  QSortScript.hs
examples/reasoning-paper/MakingACentury/: Century.hs  CenturyScript.hs
examples/reasoning-paper/MapFusion/: MapFusionScript.hs
examples/reasoning-paper/TypeClassLaws/: Laws.hs  ListScript.hs
examples/reverse/: README.md  Reverse.hs  ReverseScript.hs  WWAssAScript.hs
include/: overlap.h
scripts/: EvalPort.hs
src/HERMIT/: API.hs  Debug.hs  GHCI.hs  Typeable.hs
src/HERMIT/API/: KURE.hs  Path.hs  Prelude.hs  Remember.hs  Shell.hs  ShellEffect.hs  Types.hs
src/HERMIT/API/Dictionary/: AlphaConversion.hs  Composite.hs  Debug.hs  FixPoint.hs  Fold.hs  Function.hs  GHC.hs  Induction.hs  Inline.hs  KURE.hs  Local.hs  Navigation.hs  New.hs  Query.hs  Reasoning.hs  Remembered.hs  Rules.hs  Undefined.hs  Unfold.hs  Unsafe.hs
src/HERMIT/API/Dictionary/Local/: Bind.hs  Case.hs  Cast.hs  Let.hs
src/HERMIT/API/Dictionary/Navigation/: Crumbs.hs
src/HERMIT/API/Dictionary/WorkerWrapper/: Common.hs  Fix.hs  FixResult.hs
src/HERMIT/API/Shell/: Externals.hs  Proof.hs
src/HERMIT/GHCI/: Actions.hs  Client.hs  Driver.hs  Glyph.hs  JSON.hs  Printer.hs  Renderer.hs  Transport.hs  Types.hs
src/HERMIT/PrettyPrinter/: JSON.hs
src/HERMIT/RemoteShell/: Orphanage.hs  Types.hs
src/HERMIT/Server/: Parser.hs
src/HERMIT/Server/Parser/: BiRewrite.hs  Crumb.hs  KernelEffect.hs  Name.hs  ProofShellCommand.hs  QueryFun.hs  Rewrite.hs  Rewrite.hs-boot  ScriptEffect.hs  ShellEffect.hs  String.hs  Transform.hs  Utils.hs
src/PortTest/: EvalPort.hs
tests/: Main.hs
tests/golden/: casereduce_Main_hs_CaseReduceScript_hs.ref  concatVanishes_Flatten_hs_FlattenScript_hs.ref  concatVanishes_QSort_hs_QSortScript_hs.ref  concatVanishes_Rev_hs_RevScript_hs.ref  evaluation_Eval_hs_EvalScript_hs.ref  fib-stream_Fib_hs_FibScript_hs.ref  fib-tuple_Fib_hs_FibScript_hs.ref  fib_Fib_hs_FibScript_hs.ref  fix-fusion_Fusion_hs_FusionScript_hs.ref  flatten_Flatten_hs_FlattenScript_hs.ref  hanoi_Hanoi_hs_HanoiScript_hs.ref  induction_Induction_hs_VerifyScript_hs.ref  last_Last_hs_LastScript_hs.ref  last_Last_hs_NewLastScript_hs.ref  laws_ListLaws_hs_VerifyAppendAssocScript_hs.ref  laws_ListLaws_hs_VerifyAppendNilScript_hs.ref  laws_ListLaws_hs_VerifyAppendNonemptyScript_hs.ref  laws_ListLaws_hs_VerifyConcatAppendScript_hs.ref  laws_ListLaws_hs_VerifyConcatConcatScript_hs.ref  laws_ListLaws_hs_VerifyConcatNonemptyScript_hs.ref  laws_ListLaws_hs_VerifyConcatOfToListScript_hs.ref  laws_ListLaws_hs_VerifyConcatUnitScript_hs.ref  laws_ListLaws_hs_VerifyListLeftUnitScript_hs.ref  laws_ListLaws_hs_VerifyListMonadAssocScript_hs.ref  laws_ListLaws_hs_VerifyMapAppendScript_hs.ref  laws_ListLaws_hs_VerifyMapComposeScript_hs.ref  laws_ListLaws_hs_VerifyMapConcatScript_hs.ref  laws_ListLaws_hs_VerifyMapNonemptyScript_hs.ref  laws_ListLaws_hs_VerifyNilAppendScript_hs.ref  map-fusion_MapFusion_hs_MapFusionScript_hs.ref  mean_Mean_hs_MeanScript_hs.ref  new_reverse_Reverse_hs_ReverseScript_hs.ref  nub_Nub_hs_NubScript_hs.ref  qsort_QSort_hs_QSortScript_hs.ref  reverse_Reverse_hs_ReverseScript_hs.ref
tests/golden.X/: casereduce_Main_hs_CaseReduceScript_hs.ref  evaluation_Eval_hs_EvalScript_hs.ref  fib-stream_Fib_hs_FibScript_hs.ref  fib-tuple_Fib_hs_FibScript_hs.ref  fib_Fib_hs_FibScript_hs.ref  last_Last_hs_LastScript_hs.ref  last_Last_hs_NewLastScript_hs.ref  laws_ListLaws_hs_VerifyAppendAssocScript_hs.ref  laws_ListLaws_hs_VerifyConcatOfToListScript_hs.ref  laws_ListLaws_hs_VerifyListLeftUnitScript_hs.ref  mean_Mean_hs_MeanScript_hs.ref  qsort_QSort_hs_QSortScript_hs.ref
