name:                hermit-ghci

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            HERMIT Plugin which uses GHCi instead of HERMIT Shell
-- description:
homepage:            http://www.ittc.ku.edu/csdl/fpg
license:             BSD3
license-file:        LICENSE
author:              KU FPG
maintainer:          afarmer@ittc.ku.edu
-- copyright:
category:            Language
build-type:          Simple
cabal-version:       >=1.14

library
  ghc-options:          -Wall
                        -fno-warn-orphans
  build-depends:        aeson >= 0.8 && < 0.9,
                        base >= 4 && < 5,
                        blaze-builder,
                        containers,
                        data-default,
                        haskeline,
                        hermit >= 0.4,
                        http-types,
                        kure,
                        lens,
                        mtl,
                        process,
                        remote-json,
                        scotty >= 0.9.1,
                        stm,
                        text,
                        transformers >= 0.2,
                        transformers-compat >= 0.4,
                        wai,
                        wai-extra,
                        -- needed by generated code
                        wreq

  default-language:     Haskell2010

  exposed-modules:      HERMIT.API             
                        HERMIT.API.Path
                        HERMIT.API.Shell
                        HERMIT.API.Types
                        HERMIT.GHCI
                        HERMIT.GHCI.Actions
                        HERMIT.GHCI.Client
                        HERMIT.GHCI.JSON
                        HERMIT.GHCI.Printer
                        HERMIT.GHCI.Renderer
                        HERMIT.GHCI.Types
                        HERMIT.Server.Parser
                        Paths_hermit_ghci
  hs-source-dirs:       src

executable hermit-ghci
  ghc-options:          -Wall
  main-is:              Main.hs
  hs-source-dirs:       driver
  default-language:     Haskell2010
  build-depends:        base >= 4 && < 5,
                        remote-json,
                        hermit,
                        hermit-ghci,
                        split
