name:                hermit-shell

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            HERMIT Plugin which uses GHCi instead of HERMIT Shell
-- description:
homepage:            http://www.ittc.ku.edu/csdl/fpg
license:             BSD3
license-file:        LICENSE
author:              KU FPG
maintainer:          afarmer@ittc.ku.edu
-- copyright:
category:            Language
build-type:          Simple
cabal-version:       >=1.14
extra-source-files:  README.md, include/*.h

library
  ghc-options:          -Wall
  build-depends:        aeson               >= 0.8   && < 0.10,
                        base                >= 4     && < 5,
                        base-compat         >= 0.8.1 && < 1,
                        bytestring          >= 0.10.4,
                        containers,
                        data-default-class,
                        directory,
                        filepath,
                        haskeline,
                        hermit >= 0.4,
                        http-types,
                        kure,
                        lens,
                        mtl,
                        process,
                        remote-json,
                        scotty              >= 0.10,
                        split,
                        stm,
                        temporary-rc,
                        text,
                        transformers        >= 0.2,
                        transformers-compat >= 0.4,
                        wai,
                        wai-extra,
                        unix,
                        unordered-containers,
                        vector,
                        -- needed by generated code
                        wreq,
                        -- until 7.10 only
                        marked-pretty

  default-language:     Haskell2010

  exposed-modules:      HERMIT.API
                        HERMIT.API.Dictionary.AlphaConversion
                        HERMIT.API.Dictionary.Composite
                        HERMIT.API.Dictionary.Debug
                        HERMIT.API.Dictionary.FixPoint
                        HERMIT.API.Dictionary.Fold
                        HERMIT.API.Dictionary.Function
                        HERMIT.API.Dictionary.GHC
                        HERMIT.API.Dictionary.Induction
                        HERMIT.API.Dictionary.Inline
                        HERMIT.API.Dictionary.KURE
                        HERMIT.API.Dictionary.Local
                        HERMIT.API.Dictionary.Local.Bind
                        HERMIT.API.Dictionary.Local.Case
                        HERMIT.API.Dictionary.Local.Cast
                        HERMIT.API.Dictionary.Local.Let
                        HERMIT.API.Dictionary.Navigation
                        HERMIT.API.Dictionary.Navigation.Crumbs
                        HERMIT.API.Dictionary.New
                        HERMIT.API.Dictionary.Query
                        HERMIT.API.Dictionary.Remembered
                        HERMIT.API.Dictionary.Rules
                        HERMIT.API.Dictionary.Undefined
                        HERMIT.API.Dictionary.Unfold
                        HERMIT.API.Dictionary.WorkerWrapper.Common
                        HERMIT.API.Dictionary.WorkerWrapper.Fix
                        HERMIT.API.Dictionary.WorkerWrapper.FixResult
                        HERMIT.API.Dictionary.Reasoning
                        HERMIT.API.Dictionary.Unsafe
                        HERMIT.API.Shell
                        HERMIT.API.Shell.Externals
                        HERMIT.API.Shell.Proof
                        HERMIT.API.Types
                        HERMIT.GHCI
                        HERMIT.GHCI.Actions
                        HERMIT.GHCI.Client
                        HERMIT.GHCI.Driver
                        HERMIT.GHCI.JSON
                        HERMIT.GHCI.Printer
                        HERMIT.GHCI.Renderer
                        HERMIT.GHCI.Types
                        HERMIT.Server.Parser
                        HERMIT.Server.Parser.Crumb
                        HERMIT.Server.Parser.Name
                        HERMIT.Server.Parser.QueryFun
                        HERMIT.Server.Parser.ShellEffect
                        HERMIT.Server.Parser.KernelEffect
                        HERMIT.Server.Parser.String
                        HERMIT.Server.Parser.Transform
                        HERMIT.Server.Parser.ProofShellCommand
                        HERMIT.Server.Parser.Utils
  other-modules:        Paths_hermit_shell
                        HERMIT.Debug
  hs-source-dirs:       src
  include-dirs:         include
  includes:             overlap.h
  install-includes:     overlap.h

executable hermit-shell
  ghc-options:          -Wall
  main-is:              Main.hs
  hs-source-dirs:       driver
  default-language:     Haskell2010
  build-depends:        base >= 4 && < 5,
                        hermit-shell

test-suite hermit-shell-tests
    type:              exitcode-stdio-1.0
    build-depends:     base         >= 4.7 && < 5,
                       filepath,
                       hermit-shell,
                       process,
                       tasty,
                       tasty-hunit

    default-language:  Haskell2010
    main-is:           Main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

source-repository head
    type:              git
    location:          https://github.com/ku-fpg/hermit-shell
